Made footer height 100% to make list seem like it goes under water when going under the waves

--- a/Full Stack Course Assignments/TodoList Capstone Project/public/styles/waves.css
+++ b/Full Stack Course Assignments/TodoList Capstone Project/public/styles/waves.css
@@ -1,8 +1,11 @@
 
 footer{
     width: 100%;
+    /* I made the height 100% so that once the user's todo list goes "under water" it can seem like the list is under water */
+    height: 100%;
     background-color: #3586ff;
   }
+
 
 /*wave and animation*/
 footer .wave {
