--- a/Full Stack Course Assignments/TodoList Capstone Project/views/index.ejs
+++ b/Full Stack Course Assignments/TodoList Capstone Project/views/index.ejs
@@ -7,7 +7,6 @@
     <p class="slogan">Dont let your todo list drown under the ocean!! Stay on top of it!</p>
   </div>
   <div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5 align-items-center justify-content-center" id="parent-container">
-    <!-- Added flex-grow-1 bootstrap class to fill the available space -->
     <div class="list-group">
 
       <form action="/submit" method="POST">
@@ -16,16 +15,13 @@
           <input class="form-check-input" type="checkbox" name="checkbox" style="font-size: 1.375em;">
           <!-- Realized that If I put the text area, input of type date, and the buttons in the create-container class, the buttons would extend to the size of the textarea(not even needing to use flex-grow since the create-container is a column)-->
           <div class="create-container response">
-            <textarea class="todo-item" name="0" cols="40" rows="1" id="reminder" placeholder="New reminder"></textarea>
+            <textarea class="todo-item" name="todoItem" cols="40" rows="1" id="reminder" placeholder="New reminder"></textarea>
             <small>
-              <input type="date" name="date" class="completion">
+              <input type="date" name="date" class="completion" value="2023-12-15">
             </small>
             <input type="submit" name="createNote" class="btn btn-outline-success btn-sm border-2" value="Add"
               id="note">
           </div>
-          <!-- <span class="pt-1 form-checked-content text-center d-flex" id="createNote">
-            <input type="submit" name="createNote" class="btn btn-outline-success btn-sm border-2" value="Add" id="note">
-          </span> -->
         </label>
       </form>
 
@@ -41,12 +37,6 @@
             <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify" value="Modify">
             <input type="submit" class="btn btn-sm btn-outline-danger border-2" name="delete" value="Delete">
           </div>
-          <!-- <span class="pt-1 form-checked-content text-center button-container">
-            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify"
-              value="modify">
-            <input type="submit" class="btn btn-sm btn-outline-danger border-2"name="delete"
-              value="delete">
-          </span> -->
         </label>
       </form>
 
@@ -62,93 +52,8 @@
             <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify" value="Modify">
             <input type="submit" class="btn btn-sm btn-outline-danger border-2" name="delete" value="Delete">
           </div>
-          <!-- <span class="pt-1 form-checked-content text-center button-container">
-            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify"
-              value="modify">
-            <input type="submit" class="btn btn-sm btn-outline-danger border-2"name="delete"
-              value="delete">
-          </span> -->
         </label>
       </form>
-      <form action="/submit" method="POST">
-        <label class="list-group-item d-flex gap-3">
-          <input class="form-check-input" type="checkbox" name="checkbox" value="yes" style="font-size: 1.375em;">
-          <div class="create-container response">
-            <textarea class="todo-item" id="reminder" name="0" cols="40"
-              rows="2">Finish sales report and lets see how much it can handle</textarea>
-            <small>
-              <input type="date" name="date" class="completion">
-            </small>
-            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify" value="Modify">
-            <input type="submit" class="btn btn-sm btn-outline-danger border-2" name="delete" value="Delete">
-          </div>
-          <!-- <span class="pt-1 form-checked-content text-center button-container">
-            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify"
-              value="modify">
-            <input type="submit" class="btn btn-sm btn-outline-danger border-2"name="delete"
-              value="delete">
-          </span> -->
-        </label>
-      </form>
-      <form action="/submit" method="POST">
-        <label class="list-group-item d-flex gap-3">
-          <input class="form-check-input" type="checkbox" name="checkbox" value="yes" style="font-size: 1.375em;">
-          <div class="create-container response">
-            <textarea class="todo-item" id="reminder" name="0" cols="40"
-              rows="2">Finish sales report and lets see how much it can handle</textarea>
-            <small>
-              <input type="date" name="date" class="completion">
-            </small>
-            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify" value="Modify">
-            <input type="submit" class="btn btn-sm btn-outline-danger border-2" name="delete" value="Delete">
-          </div>
-          <!-- <span class="pt-1 form-checked-content text-center button-container">
-            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify"
-              value="modify">
-            <input type="submit" class="btn btn-sm btn-outline-danger border-2"name="delete"
-              value="delete">
-          </span> -->
-        </label>
-      </form>
-
-      <!-- <label class="list-group-item d-flex gap-3">
-        <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
-        <span class="pt-1 form-checked-content">
-          <strong>Weekly All Hands</strong>
-          <small class="d-block text-body-secondary">
-            <svg class="bi me-1" width="1em" height="1em">
-              <use xlink:href="#calendar-event"></use>
-            </svg> -->
-            <!-- 2:00–2:30pm -->
-            <!-- <input type="date" name="date" id="completion-date"> -->
-          <!-- </small>
-        </span>
-      </label> -->
-      <!-- <label class="list-group-item d-flex gap-3">
-        <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
-        <span class="pt-1 form-checked-content">
-          <strong>Out of office</strong>
-          <small class="d-block text-body-secondary">
-            <svg class="bi me-1" width="1em" height="1em">
-              <use xlink:href="#alarm"></use>
-            </svg>
-            Tomorrow
-          </small>
-        </span>
-      </label> -->
-      <!-- <label class="list-group-item d-flex gap-3 bg-body-tertiary">
-        <input class="form-check-input form-check-input-placeholder bg-body-tertiary flex-shrink-0 pe-none" disabled=""
-          type="checkbox" value="" style="font-size: 1.375em;">
-        <span class="pt-1 form-checked-content">
-          <span contenteditable="true" class="w-100">Add new task...</span>
-          <small class="d-block text-body-secondary">
-            <svg class="bi me-1" width="1em" height="1em">
-              <use xlink:href="#list-check"></use>
-            </svg>
-            Choose list...
-          </small>
-        </span>
-      </label> -->
 
     </div>
     <!-- <div class="w-25 h-25" id="ep">test</div> -->
