--- a/Full Stack Course Assignments/TodoList Capstone Project/views/index.ejs
+++ b/Full Stack Course Assignments/TodoList Capstone Project/views/index.ejs
@@ -17,39 +17,45 @@
           <div class="create-container response">
             <textarea class="todo-item" name="todoItem" cols="40" rows="1" id="reminder" placeholder="New reminder"></textarea>
             <small>
-              <input type="date" name="date" class="completion" value="2023-12-15">
+              <input type="date" name="date" class="completion" value="">
             </small>
+            <input type="hidden" name="id" value="1">
             <input type="submit" name="createNote" class="btn btn-outline-success btn-sm border-2" value="Add"
               id="note">
           </div>
         </label>
       </form>
 
-      <form action="/submit" method="POST">
+      <form name="myForm">
         <label class="list-group-item d-flex gap-3">
           <input class="form-check-input" type="checkbox" name="checkbox" value="yes" style="font-size: 1.375em;">
           <div class="create-container response">
-            <textarea class="todo-item" id="reminder" name="0" cols="40"
+            <textarea class="todo-item" id="reminder" name="todoItem" cols="40"
               rows="2">Finish sales report and lets see how much it can handle</textarea>
             <small>
+              <!-- Testing to see if targeting the name where it is only differentiated by a number works to target that specific one -->
               <input type="date" name="date" class="completion">
             </small>
-            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify" value="Modify">
+            <!-- Adding the hidden input element that acts as an id to identify a specific todo item, should be same value as the number added to the names of the html elements that are apart of that todo item, this differentiates the html elements that make up a given todo item -->
+            <input type="number" name="id" value="2" hidden>
+            <!-- <input type="number" name="" id="" hidden> -->
+            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify" value="Update">
             <input type="submit" class="btn btn-sm btn-outline-danger border-2" name="delete" value="Delete">
           </div>
         </label>
       </form>
 
-      <form action="/submit" method="POST">
+      <form name="myForm">
         <label class="list-group-item d-flex gap-3">
           <input class="form-check-input" type="checkbox" name="checkbox" value="yes" style="font-size: 1.375em;">
           <div class="create-container response">
-            <textarea class="todo-item" id="reminder" name="0" cols="40"
+            <textarea class="todo-item" id="reminder" name="todoItem" cols="40"
               rows="2">Finish sales report and lets see how much it can handle</textarea>
             <small>
               <input type="date" name="date" class="completion">
             </small>
-            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify" value="Modify">
+            <input type="hidden" name="id" value="3">
+            <input type="submit" class="btn btn-sm btn-outline-primary border-2" name="modify" value="Update">
             <input type="submit" class="btn btn-sm btn-outline-danger border-2" name="delete" value="Delete">
           </div>
         </label>
