--- a/Full Stack Course Assignments/TodoList Capstone Project/views/partials/header.ejs
+++ b/Full Stack Course Assignments/TodoList Capstone Project/views/partials/header.ejs
@@ -12,5 +12,6 @@
     <link rel="stylesheet" href="./styles/style.css">
     <title>RemindMe</title>
     <link rel="icon" type="image/png" href="./imgs/appIcon.png">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
