Further clean up of code

--- a/Full Stack Course Assignments/TodoList Capstone Project/views/index.ejs
+++ b/Full Stack Course Assignments/TodoList Capstone Project/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include("./partials/header.ejs") %>
 
-  <input type="button" value="Light Mode" id="drk-mode-btn" data-bs-theme="light">
+  <input type="button" value="Light Mode" id="drk-mode-btn">
 
   <div class="title-container">
     <h1>RemindMe</h1>
