Updated the put and delete endpoints to be more effecient and also added functionality where textareas height updated as user types; also added functionality where the list of reminders expand when a user hovers over them

--- a/Projects/EJS/TodoList Capstone Project/public/styles/style.css
+++ b/Projects/EJS/TodoList Capstone Project/public/styles/style.css
@@ -48,6 +48,7 @@ input{
     /* Leaving this styling on for now, matches the font of the title */
     font-family: MuseoModerno, sans-serif;
     font-weight: bold;
+    resize: none;
   }
 
   textarea:focus{
