Adding completed web app where user can enter the names of countries they have visited and will be highlighted on a world map, as well as being able to add different users, fully supports CRUD operations via PostrgeSQL

--- a/Practice Assignments/PostgreSQL/8.5 Family Travel Tracker/public/styles/main.css
+++ b/Practice Assignments/PostgreSQL/8.5 Family Travel Tracker/public/styles/main.css
@@ -94,6 +94,15 @@ button {
   cursor: pointer;
 }
 
+
+/* div[class=adBtn]{
+  margin-top: 1rem;
+} */
+
+form[name=delBtn]{
+  margin-top: 1rem;
+}
+
 .total-count {
   font-family: "Roboto", sans-serif;
   color: white;
