Added enhancements to travel tracker project to make whole world map visible wihthout scrolling, ability to work from scratch without a user existing at all and got rid of auto suggestions of previously entered values for text input areas

--- a/Practice Assignments/PostgreSQL/8.5 Family Travel Tracker/public/styles/main.css
+++ b/Practice Assignments/PostgreSQL/8.5 Family Travel Tracker/public/styles/main.css
@@ -8,7 +8,9 @@ html {
 }
 html,
 body {
-  height: 100%;
+  /* height: 100%; */
+  /* changed the height value so the whole world map would fit without having to scroll */
+  height: 95%;
 }
 body {
   background: #21252b;
