--- a/Practice Assignments/PostgreSQL/8.5 Family Travel Tracker/views/index.ejs
+++ b/Practice Assignments/PostgreSQL/8.5 Family Travel Tracker/views/index.ejs
@@ -25,19 +25,13 @@
 
   
   <form action="/add" method="post">
-    <input type="text" name="country" autofocus placeholder="<%= locals.error ? error :  'Enter country name'%>">
-    <!-- <div class="adBtn"> -->
+    <!-- added the autocomplete attribute so previously inputted values wouldnt be automatically recommended -->
+    <input type="text" name="country" autocomplete="off" autofocus placeholder="<%= locals.error ? error :  'Enter country name'%>">
     <button type="submit" style="background-color: <%= color %>;">Add</button>
-    <!-- <form action="/delete" method="post">
-      <button type="submit" style="background-color: <%= color %>;">Delete Current User</button>
-    </form> -->
-  <!-- </div> -->
   </form>
-  <div class="adBtn"></div>
   <form action="/delete" method="post" name="delBtn">
     <button type="submit" style="background-color: <%= color %>;">Delete Current User</button>
   </form>
-</div>
 
   <section class="ag-canvas">
     <svg class="ag-canvas_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
