--- a/Projects/PostgreSql/8.6 Permalist Project/views/index.ejs
+++ b/Projects/PostgreSql/8.6 Permalist Project/views/index.ejs
@@ -4,18 +4,21 @@
     <!-- <h1>
       <%# listTitle %>
     </h1> -->
+  <form action="/add" method="post">
   <div class="s-container">
-    <!-- <select name="dates" id="dates">
-      <option value="<%= listTitle %>"><h1> <%= listTitle %> </h1></option>
-    </select> -->
-    <input type="date" id="datePicker" name="datePicker">
+    <form action="/" method="get" class="newDate">
+    <input type="date" id="datePicker" name="datePicker" value="<%= listTitle %>">
+  </form>
   </div>
   </div>
   <div class="box">
-    <form class="item" action="/add" method="post">
+    <div class="item">
+    <!-- <form class="item" action="/add" method="post"> -->
       <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
-      <button class="add" type="submit" name="list" value=<%=listTitle %> >+</button>
-    </form>
+      <button class="add" type="submit" name="list" value="<%=listTitle %>" >+</button>
+    </div>
+  </form>
+    <!-- </form> -->
     <% for(let item of listItems){%>
       <div class="item">
         <form action="/delete" method="post">
@@ -40,10 +43,12 @@
 
         <!-- <form class="item" action="/add" method="post">
           <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
-          <button class="add" type="submit" name="list" value=<%=listTitle %> >+</button>
+          <button class="add" type="submit" name="list" value=<%#listTitle %> >+</button>
         </form> -->
   </div>
 
+  <!-- <script src="../public/js/modernizr-custom.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script>
     function handler(id) {
       document.getElementById("title" + id).setAttribute("hidden", true)
@@ -51,5 +56,12 @@
       document.getElementById("done" + id).removeAttribute("hidden")
       document.getElementById("input" + id).removeAttribute("hidden")
     }
+
+//     $(document).ready(function() {
+//       event.preventDefault();
+//     $('#datePicker').on('change', function() {
+//       $('.newDate').submit();
+//     });
+// });
   </script>
   <%- include('partials/footer.ejs'); -%>
