--- a/Projects/PostgreSql/8.6 Permalist Project/public/styles/main.css
+++ b/Projects/PostgreSql/8.6 Permalist Project/public/styles/main.css
@@ -7,26 +7,24 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  justify-content: stretch;
+  justify-content: center;
   min-height: 95vh;
 }
 
-/* select {
-  flex-grow: 1;
-  text-align: center;
-  font-size: larger;
-} */
-
-.s-container > input{
+#datePicker{
   flex-grow: 1;
   text-align: center;
   font-size: x-large;
   color:#fff;
   background-color: #a683e3;
+  border: none;
+  
 }
 
 .s-container{
   display: flex;
+  max-width: 250px;
+  margin: 50px auto;
 }
 
 main {
@@ -82,17 +80,7 @@ p {
   color: #00204a;
 }
 
-/* form {
-  text-align: center;
-  margin-left: 20px;
-} */
-
-form[action="/delete"]{
-  text-align: center;
-  margin-left: 20px;
-}
-
-form[action="/edit"]{
+form {
   text-align: center;
   margin-left: 20px;
 }
@@ -122,7 +110,7 @@ button.edit {
 input[type="text"] {
   text-align: left;
   height: 60px;
-  top: 10px;
+  /* top: 10px; */
   border: none;
   background: transparent;
   font-size: 20px;
