Adding current advancement with functional adding of todo items and retrieving items for dates

--- a/Projects/PostgreSql/8.6 Permalist Project/views/partials/footer.ejs
+++ b/Projects/PostgreSql/8.6 Permalist Project/views/partials/footer.ejs
@@ -4,11 +4,11 @@
 
 <script> 
     // Get today's date
-    console.log(new Date().toISOString());
-    const today = new Date().toISOString().split('T')[0];
+    // console.log(new Date().toISOString());
+    // const today = new Date().toISOString().split('T')[0];
 
     // Set the value of the date input to today's date
-    $('#datePicker').attr("value", today);
+    // $('#datePicker').attr("value", today);
 
 </script> 
 </body>
