--- a/Projects/PostgreSql/8.6 Permalist Project/views/index.ejs
+++ b/Projects/PostgreSql/8.6 Permalist Project/views/index.ejs
@@ -2,7 +2,7 @@
   <form action="/add" method="post">
     <div class="box" id="heading">
       <div class="s-container">
-        <input type="date" id="datePicker" name="datePicker" value="<%= listTitle %>" onchange="this.form.submit()">
+          <input type="date" id="datePicker" name="datePicker" value="<%= listTitle %>" onchange="this.form.submit()">
       </div>
     </div>
     <div class="box">
@@ -10,7 +10,6 @@
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
         <button class="add" type="submit" name="list" value="<%=listTitle %>">+</button>
       </div>
-    <!-- </div> -->
   </form>
   <% for(let item of listItems){%>
     <div class="item">
@@ -31,6 +30,8 @@
       </form>
       <button id="edit<%=item.id%>" class="edit" onclick="handler('<%=item.id%>')"><img class="icon"
           src="/assets/icons/pencil-solid.svg" alt="pencil image"></button>
+      <button id="delete<%=item.id%>" class="edit" onclick="handler('<%=item.id%>')"><img class="icon"
+          src="/assets/icons/icons8-trash.svg" alt="trash can image"></button>
     </div>
     <% } %>
       </div>
@@ -40,8 +41,10 @@
         function handler(id) {
           document.getElementById("title" + id).setAttribute("hidden", true)
           document.getElementById("edit" + id).setAttribute("hidden", true)
+          document.getElementById("delete" + id).setAttribute("hidden", true)
           document.getElementById("done" + id).removeAttribute("hidden")
           document.getElementById("input" + id).removeAttribute("hidden")
+
         }
       </script>
       <%- include('partials/footer.ejs'); -%>
