--- a/Projects/PostgreSql/8.6 Permalist Project/views/index.ejs
+++ b/Projects/PostgreSql/8.6 Permalist Project/views/index.ejs
@@ -1,19 +1,21 @@
 <%- include('partials/header.ejs'); -%>
+<div class="box">
   <form action="/add" method="post">
-    <div class="box" id="heading">
+    <div id="heading">
       <div class="s-container">
           <input type="date" id="datePicker" name="datePicker" value="<%= listTitle %>" onchange="this.form.submit()">
       </div>
     </div>
-    <div class="box">
+  <!-- <div class="box"> -->
       <div class="item">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
         <button class="add" type="submit" name="list" value="<%=listTitle %>">+</button>
       </div>
   </form>
+  <!-- <div class="box"> -->
   <% for(let item of listItems){%>
     <div class="item">
-      <form action="/delete" method="post">
+      <form action="/delete" method="post" class="delete">
         <input type="checkbox" onchange="this.form.submit()" name="deleteItemId" value="<%= item.id %>">
       </form>
 
@@ -23,8 +25,7 @@
 
       <form class="edit" action="/edit" method="post">
         <input type="hidden" name="updatedItemId" value="<%= item.id %>">
-        <input id="input<%=item.id%>" type="text" name="updatedItemTitle" value="<%= item.title %>" autocomplete="off"
-          autofocus="true" hidden />
+        <input id="input<%=item.id%>" type="text" name="updatedItemTitle" value="<%= item.title %>" autocomplete="off" autofocus="true" hidden />
         <button id="done<%=item.id%>" class="edit" type="submit" hidden><img class="icon"
             src="/assets/icons/check-solid.svg" alt="tick image"></button>
       </form>
@@ -34,7 +35,7 @@
           src="/assets/icons/icons8-trash.svg" alt="trash can image"></button>
     </div>
     <% } %>
-      </div>
+  </div>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script>
