--- a/Projects/PostgreSql/8.6 Permalist Project/public/styles/main.css
+++ b/Projects/PostgreSql/8.6 Permalist Project/public/styles/main.css
@@ -28,7 +28,7 @@ body {
 }
 
 main {
-  /* commented out this line due to it causing weird issue where the newly added todo items would be slightly moved to the left compared to the already exisitng items */
+  /* commented out this line due to it causing weird issue where the newly added todo items would be slightly moved to the right compared to the already exisitng items */
   /* text-align: center; */
   flex: 1 0 auto;
 }
@@ -38,7 +38,7 @@ h1 {
 }
 
 .box {
-  max-width: 400px;
+  max-width: 800px;
   margin: 50px auto;
   background: white;
   border-radius: 5px;
@@ -83,7 +83,7 @@ p {
   color: #00204a;
 }
 
-/* Commented this out due to it causing a weird issue where the title would not fill the whole container */
+/* Commented this out due to it causing a weird issue where the date would not fill the whole container */
 /* form {
   text-align: center;
   margin-left: 20px;
@@ -124,7 +124,9 @@ input[type="text"] {
   background: transparent;
   font-size: 20px;
   font-weight: 200;
-  width: 80%;
+  /* Changed width to be able to see more of text when editing a todo item */
+  width: 600px;
+  /* width: 80%; */
 }
 
 input[type="text"]:focus {
